[package]
name = "ldpc"
version = "0.4.4"
authors = ["maxtremblay <matrem@protonmail.com>"]
edition = "2018"
description = "A toolbox for classical and quantum LDPC codes."
repository = "https://github.com/maxtremblay/ldpc"
license = "MIT OR Apache-2.0"
keywords = ["error-correction", "quantum", "ldpc"]
categories = ["algorithms", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigs = "0.2.3"
indexmap = "1.6.1"
itertools = "0.10.0"
pauli = "0.2.2"
rand = { version = "0.8.3", features = ["serde1"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
sparse-bin-mat = "0.5.1"
