[package]
name = "ldpc"
version = "0.7.0"
authors = ["maxtremblay <matrem@protonmail.com>"]
edition = "2021"
description = "A toolbox for classical and quantum LDPC codes."
repository = "https://github.com/maxtremblay/ldpc"
license = "MIT OR Apache-2.0"
keywords = ["error-correction", "quantum", "ldpc"]
categories = ["algorithms", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigs = "0.3.0"
indexmap = "1.8.1"
itertools = "0.10.3"
pauli = "0.3.0"
rand = { version = "0.8.5", features = ["serde1"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sparse-bin-mat = "0.7.0"
sprs = "0.11.0"
